--- a/about.html
+++ b/about.html
@@ -792,7 +792,7 @@
     <div class="row gy-4">
       <div class="col-lg-4 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up" data-aos-delay="100">
         <div class="icon mb-3">
-          <img src="assets/img/iconos/certificado.png" alt="Cocina Jujeña Icon" class="icon-img">
+          <img src="assets/img/iconos/Certificado-2.png" alt="" class="icon-img">
         </div>
         <h4 class="title">Asociado Élite</h4>
      
