--- a/about.html
+++ b/about.html
@@ -461,11 +461,11 @@
     </div><!-- End pricing row -->
 
   </div>
-  <br>
-  
+
+ <img src="assets/img/separador.png" alt="Descripción de la imagen" style="display: block; margin: 20px auto; width: 100%; height: auto; max-width: 100%;">
 </section><!-- /Pricing Section -->
 
-<img src="assets/img/separador.png" alt="Descripción de la imagen" data-aos="zoom-in" data-aos-delay="500" style="display: block; margin: 20px auto; ">
+
 
 
 
