--- a/about.html
+++ b/about.html
@@ -222,13 +222,13 @@
     </div>
 
   </div>
-
+  <img src="assets/img/separador.png" alt="Descripción de la imagen" style="display: block; margin: 20px auto; width: 100%; height: auto; max-width: 100%;">
 </section><!-- /Stats Section -->
 
 
 
 
-    <img src="assets/img/separador.png" alt="Descripción de la imagen" style="display: block; margin: 20px auto;">
+
 
 
 
