--- a/about.html
+++ b/about.html
@@ -464,7 +464,7 @@
   </div>
 
 
- <img src="assets/img/separador.png" alt="Descripción de la imagen" style="display: block; margin: 20px auto; width: 100%; height: auto; max-width: 100%;">
+ <im src="assets/img/separador.png" alt="Descripción de la imagen" style="display: block; margin: 20px auto; width: 100%; height: auto; max-width: 100%;">
 </section><!-- /Pricing Section -->
 
 
