--- a/about.html
+++ b/about.html
@@ -251,7 +251,7 @@
     <div class="row gy-4">
       <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
         <div class="content">
-          <img src="assets/img/ICONO-04.png" class="faq-img" alt="Atención al Cliente" width="150" height="150">
+          <img src="assets/img/icono-40.png" class="faq-img" alt="Atención al Cliente" width="150" height="150">
           <h3><span>¿Qué verás </span><strong>en nuestro taller?</strong></h3>
           <p>Todo lo necesario para que ouedas expandir tus conocimientos y perfecionar tus técnicas.</p>
         
