--- a/about.html
+++ b/about.html
@@ -415,7 +415,7 @@
       <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
         <div class="pricing-tem">
         
-          <div class="pricing-item" style="background-image: url('assets/img/palermo.jpg');">
+          <div class="pricing-item" style="background-image: url('assets/img/palermo1.jpg');">
            
             <ul>
               <li></li>
